--- a/src/modules/pages/services/Services.module.scss
+++ b/src/modules/pages/services/Services.module.scss
@@ -6,7 +6,7 @@
 .description {
 	max-width: 758px;
 	width: 100%;
-	margin-block: 80px 174px;
+	margin-block: 80px 134px;
 	font-size: var(--large);
 
 	@include media($mobile-bp) {
@@ -16,23 +16,25 @@
 }
 
 .offer {
-	@include flex($justify: center, $gap: 40px);
+	@include flex($gap: 40px);
+	list-style-type: none;
 
 	@include media($mobile-bp) {
 		flex-direction: column;
 	}
-
-	&Description {
-		max-width: 622px;
-		width: 100%;
-
-		@include media($mobile-bp) {
-			max-width: unset;
-		}
-	}
 }
 
-.offerList {
+.offerClientsList {
+	@include flex($justify: space-around, $gap: 50px);
+	align-items: center;
+	flex-wrap: wrap;
+	max-width: 676px;
+	width: 100%;
+	margin-top: 6px;
+	list-style-type: none;
+}
+
+.offerServicesList {
 	font-weight: 300;
 	list-style-type: none;
 	margin-top: 6px;
